--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@sap/cds": "^3.18.3",
     "express": "^4.17.1",
-    "hdb": "^0.17.1"
+    "hdb": "^0.17.1",
+    "passport": "^0.4.0"
   },
   "engines": {
     "node": "^8.9"
